<resources>
    <string name="app_name">Automotive HUD</string>
    <string name="auto_hud_control">Automotive HUD Control</string>
    <string name="auto_hud_dest">Automotive HUD Destination</string>
    <string name="bluetooth_discoverable">Make Discoverable</string>
    <string name="find_devices">Scan for devices</string>
    <string name="attempt_reconnect">Attempt Reconnect</string>
    <string name="my_location">Your current location:</string>
    <string name="address">Address:\ \ </string>
    <string name="address_hint">567 1st St.</string>
    <string name="state">State:\ \ </string>
    <string name="state_hint">New York</string>
    <string name="city">City:\ \ </string>
    <string name="city_hint">Buffalo</string>
    <string name="set_dest">Set Destination</string>
    <string name="device_connection">Connection to device:\ \ </string>
    <string name="navigation">Setup Navigation</string>
    <string name="dest_status">Destination:\ \ </string>
    <string name="select_fm">Select FM Radio Station:\ \ </string>
    <string name="set_station">Set Station</string>
    <string name="current_station">Current:\ \ </string>
    <string name="enter_dest">Enter Destination:\ \ </string>
    <string name="current_dest">Current Destination:\ \ </string>
    <string name="location">Location:\ \ </string>
    <string name="location_hint">Safeway</string>
    <string name="choose_color">Choose a text color:</string>
    <string name="choose_timer">Choose a time (sec):</string>
    <string name="timer_expl">Choice will tell location to show if idle for time selected.</string>
    <string-array name="colors_array">
        <item>White</item>
        <item>Yellow</item>
        <item>Blue</item>
        <item>Lime</item>
        <item>Cyan</item>
        <item>Red</item>
    </string-array>
    <string-array name="timer_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>
</resources>
