<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlue"
    android:orientation="vertical"
    tools:context="com.dashhud.crigerkwok.dashboardhud.Destination_Info">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/auto_hud_dest"
        android:textColor="@color/Black"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/my_location"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_address"
        android:textColor="@color/Blue"
        android:text="Current Address here"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:text="@string/enter_dest"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:labelFor="@+id/address_edit"
            android:textColor="@color/Black"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address_edit"
            android:hint="@string/address_hint"
            android:inputType="textPostalAddress"
            android:textColor="@color/Black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:labelFor="@+id/state_edit"
            android:textColor="@color/Black"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state_edit"
            android:hint="@string/state_hint"
            android:inputType="textPostalAddress"
            android:textColor="@color/Black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/city_edit"
            android:text="@string/city"
            android:textColor="@color/Black"
            android:textSize="16sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city_edit"
            android:hint="@string/city_hint"
            android:inputType="textPostalAddress"
            android:textColor="@color/Black"/>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_destination_btn"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@color/Black"
        android:textAllCaps="false"
        android:text="@string/set_dest"
        android:onClick="set_destination"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:text="@string/current_dest"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:text="@string/address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saved_address"
            android:textColor="@color/Black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:text="@string/state"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saved_state"
            android:textColor="@color/Black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:text="@string/city"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saved_city"
            android:textColor="@color/Black"/>

    </LinearLayout>

</LinearLayout>
