<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlue"
    android:orientation="vertical"
    tools:context="com.dashhud.crigerkwok.dashboardhud.Control_and_location">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/auto_hud_control"
        android:textColor="@color/Black"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Black"
                    android:text="@string/device_connection"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/device_connection"
                    android:textColor="@color/Red"
                    android:text="(Not) Connected"/>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/my_location"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/location_address"
                android:textColor="@color/Blue"
                android:text="No location found"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/speed_mph"
                android:textColor="@color/Green"
                android:textSize="40sp"
                android:text="No speed found"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/select_fm"
                android:textColor="@color/Black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">

                <ImageButton
                    android:id="@+id/FM_prev"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:onClick="prev_station"
                    android:src="@drawable/back_arrow" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/FM_frequency_text"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/Black"
                    android:background="@color/White"
                    android:gravity="center" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:id="@+id/FM_next"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:onClick="next_station"
                    android:src="@drawable/forward_arrow" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <SeekBar
                android:id="@+id/FM_radio_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="99"
                android:paddingEnd="30dp"
                android:paddingStart="30dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/set_station_btn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:onClick="save_station"
                    android:text="@string/set_station"
                    android:textAllCaps="false"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/current_station"
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/saved_station_str"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/Black" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connect_bt_service"
                android:visibility="gone"
                android:text="Connect"
                android:onClick="connect_service"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saved_from_other"
                android:layout_gravity="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
